Problema resuelto al recrear activity en modo noche con koin
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 2 hours 52 minutes

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -108,4 +108,7 @@
     <string name="SHARE_DEPTH">Depth</string>
     <string name="SHARE_GEO_REF">Georeference</string>
     <string name="SHARE_DOWNLOAD_MSG"><![CDATA[Download the app here ->]]></string>
+    <string name="email_chooser_title">Send email with:</string>
+    <string name="email_intent_fail">You don\'t have any email app to contact us</string>
+    <string name="email_subject">LastQuakeChlle developer contact</string>
 </resources>
