--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,8 +249,11 @@
     <string name="contact_developer">Contacto desarrollador</string>
     <string name="contact_summary">¿Sugerencias? ¿Problemas?</string>
     <string name="about">Acerca</string>
-    <string name="mail_to_felipe" translatable="false">mailto:felipe.gonzalezalarcon94@gmail.com</string>
+    <string name="mail_to_felipe" translatable="false">felipe.gonzalezalarcon94@gmail.com</string>
     <string name="no_apagado">Wifi apagado</string>
     <string name="wifi_off_msg">Por favor, revisa tu conexión</string>
+    <string name="email_intent_fail">No tienes ninguna app de email para contactarnos</string>
+    <string name="email_chooser_title">Envia un email usando:</string>
+    <string name="email_subject">Contacto desarrollador LastQuakeChile</string>
 
 </resources>
