Se elimina snackbar y se reemplaza por toast, para indicar network error
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 1 hour 21 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -255,5 +255,6 @@
     <string name="email_intent_fail">No tienes ninguna app de email para contactarnos</string>
     <string name="email_chooser_title">Envia un email usando:</string>
     <string name="email_subject">Contacto desarrollador LastQuakeChile</string>
+    <string name="reintentar">Reintentar</string>
 
 </resources>
