Implementacion de sandwich para el manejo estandar de errores en retrofit
Signed-off-by: Felipe González Alarcón <felipe.gonzalezalarcon94@gmail.com>

Took 3 hours 41 minutes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,5 +256,7 @@
     <string name="email_chooser_title">Envia un email usando:</string>
     <string name="email_subject">Contacto desarrollador LastQuakeChile</string>
     <string name="reintentar">Reintentar</string>
+    <string name="service_error">Servidor de sismos no disponible</string>
+    <string name="error_404">404\nUps, ha ocurrido un error</string>
 
 </resources>
