Refactoring del mostrar error despues de una solicitud
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,5 +239,7 @@
     <string name="reintentar">Reintentar</string>
     <string name="service_error">Servidor de sismos no disponible</string>
     <string name="recargar">Recargar</string>
+    <string name="no_mas_sismos">No hay más items</string>
+    <string name="desliza_izq">Desliza a la izquierda para ver sismos</string>
 
 </resources>
