--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,5 +241,6 @@
     <string name="recargar">Recargar</string>
     <string name="no_mas_sismos">No hay más items</string>
     <string name="desliza_izq">Desliza a la izquierda para ver sismos</string>
+    <string name="copia_local">Mostrando copia local</string>
 
 </resources>
