--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -105,4 +105,11 @@
     <string name="email_chooser_title">Envia un email usando:</string>
     <string name="email_subject">Contacto desarrollador LastQuakeChile</string>
     <string name="email_intent_fail">No tienes ninguna app de email para contactarnos</string>
+    <string name="reintentar">Reintentar</string>
+    <string name="service_error">Servidor de sismos no disponible</string>
+    <string name="recargar">Recargar</string>
+    <string name="no_mas_sismos">No hay más items</string>
+    <string name="swipe_left">Desliza a la izquierda para ver sismos</string>
+    <string name="local_copy">Mostrando copia local</string>
+    <string name="swipe_left_icon">Icono desliza izquierda</string>
 </resources>
