--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,16 +10,13 @@
     <string name="DEEP_LINK" translatable="false">https://lastquakechile.page.link/lqch</string>
 
     <!-- PROD AD-->
-    <!--<string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-6355378855577476/5493893896</string>
-    <string name="ADMOB_ID_APPOPEN" translatable="false">ca-app-pub-6355378855577476/7856079761</string>
+    <!--
     <string name="ADMOB_ID_NATIVE_FRAGMENT" translatable="false">ca-app-pub-6355378855577476/2611250693</string>
     <string name="ADMOB_ID_NATIVE_DETAILS" translatable="false">ca-app-pub-6355378855577476/2723765487</string>
 -->
     <!--TEST AD-->
-    <string name="ADMOB_ID_BANNER" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
     <string name="ADMOB_ID_NATIVE_FRAGMENT" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
     <string name="ADMOB_ID_NATIVE_DETAILS" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
-    <string name="ADMOB_ID_APPOPEN" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
 
     <!-- TOOLBAR Menu STRINGS -->
     <string name="settings">Configuración</string>
@@ -240,8 +237,8 @@
     <string name="service_error">Servidor de sismos no disponible</string>
     <string name="recargar">Recargar</string>
     <string name="no_mas_sismos">No hay más items</string>
-    <string name="desliza_izq">Desliza a la izquierda para ver sismos</string>
-    <string name="copia_local">Mostrando copia local</string>
-    <string name="icono_desliza_izquierda">Icono desliza izquierda</string>
+    <string name="swipe_left">Desliza a la izquierda para ver sismos</string>
+    <string name="local_copy">Mostrando copia local</string>
+    <string name="swipe_left_icon">Icono desliza izquierda</string>
 
 </resources>
