--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     //TODO: Cambiar por figonzal
-    <string name="API_URL" translatable="false">http://192.168.1.105:8090/</string>
+    <string name="API_URL" translatable="false">https://lqch.figonzal.cl/</string>
 
     <string name="ADMOB_MASTER_KEY" translatable="false">ca-app-pub-6355378855577476~7414287525</string>
 
