Se agrega boton para ver sismo dentro de la notificacion
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -112,4 +112,5 @@
     <string name="swipe_left">Swipe left to see earthquakes</string>
     <string name="local_copy">Showing local copy</string>
     <string name="swipe_left_icon">Swipe left icon</string>
+    <string name="view_quake_notification_button">See earthquake</string>
 </resources>
