--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -112,4 +112,5 @@
     <string name="swipe_left">Desliza a la izquierda para ver sismos</string>
     <string name="local_copy">Mostrando copia local</string>
     <string name="swipe_left_icon">Icono desliza izquierda</string>
+    <string name="view_quake_notification_button">Ver sismo</string>
 </resources>
