--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,6 @@
     <!-- KEY DE JSON PARA PHP -->
     <!-- KEY PARA INTENT & NOTIFICACIONES -->
     <string name="INTENT_QUAKE" translatable="false">quake</string>
-    <string name="INTENT_TITULO" translatable="false">titulo</string>
-    <string name="INTENT_DESCRIPCION" translatable="false">descripcion</string>
     <string name="INTENT_CIUDAD" translatable="false">ciudad</string>
     <string name="INTENT_REFERENCIA" translatable="false">referencia</string>
     <string name="INTENT_LATITUD" translatable="false">latitud</string>
@@ -240,5 +238,11 @@
     <string name="shortcut_short_report_label">Reportes mensuales</string>
     <string name="shortcut_long_report_label">Reportes sísmicos mensuales</string>
     <string name="shortcut_report_disabled">Reporte deshabilitado</string>
+    <string name="alert_title_notification">¡Alerta sísmica!</string>
+    <string name="alert_description_notification">Sismo de %d registrado a %s</string>
+    <string name="preliminary_format_notification">[Preliminar] %s</string>
+    <string name="verified_format_notification">[Corrección] %s</string>
+    <string name="no_alert_title_notification">Sismo de %d</string>
+    <string name="no_alert_description_notification">Registrado a %s</string>
 
 </resources>
