Correccion de string format erroneo

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -239,10 +239,10 @@
     <string name="shortcut_long_report_label">Reportes sísmicos mensuales</string>
     <string name="shortcut_report_disabled">Reporte deshabilitado</string>
     <string name="alert_title_notification">¡Alerta sísmica!</string>
-    <string name="alert_description_notification">Sismo de %d registrado a %s</string>
+    <string name="alert_description_notification">Sismo de %.1f registrado a %s</string>
     <string name="preliminary_format_notification">[Preliminar] %s</string>
     <string name="verified_format_notification">[Corrección] %s</string>
-    <string name="no_alert_title_notification">Sismo de %d</string>
+    <string name="no_alert_title_notification">Sismo de %.1f</string>
     <string name="no_alert_description_notification">Registrado a %s</string>
 
 </resources>
