--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -125,7 +125,7 @@
     <string name="alert_title_notification">Earthquake alert!</string>
     <string name="preliminary_format_notification">[Preliminary] %s</string>
     <string name="verified_format_notification">[Correction] %s</string>
-    <string name="no_alert_title_notification">Quake of %d</string>
+    <string name="no_alert_title_notification">Quake of %.1f</string>
     <string name="no_alert_description_notification">Registered at %s</string>
-    <string name="alert_description_notification">Quake of %d registered at %s</string>
+    <string name="alert_description_notification">Quake of %.1f registered at %s</string>
 </resources>
