--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="circulo_pintado">Color magnitud sismo</string>
-    <string name="imagen_toolbar">Imagen toolbar</string>
-    <string name="icono_tiempo">Icono tiempo</string>
+    <string name="imagen_toolbar">Fondo de barra de herramientas</string>
+    <string name="icono_tiempo">Icono fecha sismos</string>
     <string name="tiempo">Fecha/Hora</string>
-    <string name="icono_distancia">Icono distancia</string>
+    <string name="icono_distancia">Icono posición sismo</string>
     <string name="distancia">Posición GMS</string>
     <string name="icono_epicentro">Icono epicentro</string>
     <string name="icono_escala">Icono escala</string>
@@ -12,7 +12,7 @@
     <string name="escala">Escala</string>
     <string name="quake_details_magnitud_local">Magnitud local (Ml)</string>
     <string name="quake_details_magnitud_momento">Magnitud Momento (Mw)</string>
-    <string name="icono_sensible">Icono sensible</string>
+    <string name="icono_sensible">Icono sismo sensible</string>
     <string name="firebase_channel_name_quakes">Alerta sismos</string>
     <string name="firebase_channel_description_quakes">Recibe alertas de sismos sobre 5 grados</string>
     <string name="coordenadas_oeste">O</string>
@@ -77,7 +77,7 @@
     <string name="night_mode_key_toast_off">Modo noche desactivado</string>
     <string name="version">"Versión "</string>
     <string name="qu_hay_de_nuevo_en_la_app">¿Qué hay de nuevo en la app?</string>
-    <string name="solucionamos_el_problema">Solucionamos el problema</string>
+    <string name="novedades">Novedades</string>
     <string name="entendido">Entendido</string>
     <string name="map_type">Tipo de mapa</string>
     <string name="new_version_icon">Icono nueva version</string>
@@ -86,7 +86,7 @@
     <string name="ver_m_s">Ver más</string>
     <string name="http_error">Ups, algo funcionó mal!</string>
     <string name="io_error">Revisa tu conexión a Internet</string>
-    <string name="icon_ad_app">Icono publicidad</string>
+    <string name="icon_ad_app">Icono publicidad aplicación</string>
     <string name="version_key">versión</string>
     <string name="about_msg">LastQuakeChile, te permite visualizar rápidamente los últimos sismos ocurridos en Chile</string>
     <string name="contact_developer">Contacto desarrollador</string>
@@ -111,7 +111,7 @@
     <string name="no_mas_sismos">No hay más items</string>
     <string name="swipe_left">Desliza a la izquierda para ver sismos</string>
     <string name="local_copy">Mostrando copia local</string>
-    <string name="swipe_left_icon">Icono desliza izquierda</string>
+    <string name="swipe_left_icon">Icono izquierda</string>
     <string name="view_quake_notification_button">Ver sismo</string>
     <string name="shortcut_short_map_label">Mapa sismos</string>
     <string name="shortcut_long_map_label">Mapa últimos sismos</string>
@@ -131,4 +131,10 @@
     <string name="sismos_chile">Sismos en chile</string>
     <string name="revisa_los_ltimos_sismos_en_chile">Revisa los últimos sismos en Chile</string>
     <string name="desliza_a_la_izquierda">Desliza a la izquierda</string>
+    <string name="contenido_multimedia_de_publicidad">Contenido multimedia de publicidad</string>
+    <string name="puntaje_estrellas_aplicaci_n_publicidad">Puntaje estrellas aplicación publicidad</string>
+    <string name="ad_pager_content_description">Pestaña publicidad</string>
+    <string name="quakes_pager_content_description">Pestaña sismos</string>
+    <string name="map_pager_content_description">Pestaña mapa</string>
+    <string name="reports_pager_content_description">Pestaña reportes</string>
 </resources>
