--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -137,4 +137,6 @@
     <string name="quakes_pager_content_description">Pestaña sismos</string>
     <string name="map_pager_content_description">Pestaña mapa</string>
     <string name="reports_pager_content_description">Pestaña reportes</string>
+    <string name="high_priority_summary">Mostrar vista previa de notificaciones en la parte superior de la pantalla</string>
+    <string name="high_priority_title">Notificaciones de alta prioridad</string>
 </resources>
