--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -248,5 +248,7 @@
     <string name="high_priority_pref_key" translatable="false">high_priority_notifications</string>
     <string name="high_priority_summary">Mostrar vista previa de notificaciones en la parte superior de la pantalla</string>
     <string name="high_priority_title">Notificaciones de alta prioridad</string>
+    <string name="quake_preliminary_pref" translatable="false">quake_preliminary_pref</string>
+    <string name="preliminary_pref_title">Alertas sismos preliminares</string>
 
 </resources>
