Implementación de menu de estado del servicio
Signed-off-by: figonzal1 <felipe.gonzalezalarcon94@gmail.com>

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -140,4 +140,5 @@
     <string name="high_priority_title">Use high priority notifications</string>
     <string name="high_priority_summary">Show previews of notifications at the top of the screen</string>
     <string name="preliminary_pref_title">Preliminary quakes alerts</string>
+    <string name="service_status">Service status</string>
 </resources>
