--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -140,4 +140,5 @@
     <string name="high_priority_summary">Mostrar vista previa de alertas en la parte superior de la pantalla</string>
     <string name="high_priority_title">Alertas de alta prioridad</string>
     <string name="preliminary_pref_title">Alertas de sismos preliminares</string>
+    <string name="service_status">Estado del servicio</string>
 </resources>
