--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -87,7 +87,6 @@
     <string name="http_error">Oops, something went wrong!</string>
     <string name="io_error">Check your internet connection</string>
     <string name="icon_ad_app">Icon ad app</string>
-    <string name="version_key">version</string>
     <string name="about_msg">LastQuakeChile, allows you to quickly view the latest earthquakes in Chile</string>
     <string name="contact_developer">Contact developer</string>
     <string name="contact_summary">Suggestions? Problems?</string>
@@ -141,4 +140,7 @@
     <string name="high_priority_summary">Show previews of notifications at the top of the screen</string>
     <string name="preliminary_pref_title">Preliminary quakes alerts</string>
     <string name="service_status">Service status</string>
+    <string name="minimum_magnitude_title">Minimum magnitude alert</string>
+    <string name="min_magnitude_dialog_title">Minimum magnitude</string>
+    <string name="min_magnitude_dialog_message">Earthquakes greater than ...   Example: 5.6, 3.5, 2.9, etc</string>
 </resources>
